--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -16,16 +16,20 @@
     padding: 2rem;
   }
 }
+
+
 .heroButton {
-  background: var(--ifm-color-gray-900);
+  background: var(--bg);
   color: var(--ifm-color-secondary);
   font-weight: 600;
   margin: 1.5rem 0;
+
+  transition: 0.3s filter;
 }
 
 .heroButton:hover {
-  color: var(--ifm-color-secondary-light);
-  background: var(--ifm-color-gray-800);
+  color: var(--ifm-color-secondary);
+  filter: brightness(1.2);
 }
 
 .buttons {
@@ -57,15 +61,17 @@
   justify-content: center;
 
   padding: 2rem 1rem;
-  background: #264653;
+  /* background: #264653; */
 }
+
+
 
 .copyInner {
   max-width: 80ch;
 }
 
 .copyMain h2 {
-  color: var(--ifm-color-secondary);
+  color: var(--ifm-color-secondary-darker);
 }
 
 @media screen and (min-width: 1400px) {
